add --illegal-access=warn